--- a/docker/nginx/volumes/conf.d/default.conf
+++ b/docker/nginx/volumes/conf.d/default.conf
@@ -6,12 +6,12 @@ server {
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-Content-Type-Options "nosniff";
 
-    server_name example.com;
-    root /var/www/pod/src;
+    server_name localhost;
+    root /var/www/php/src;
     index server.php;
 
     location / {
-        try_files $uri $uri/ /index.php?$query_string;
+        try_files $uri $uri/ /server.php?$query_string;
     }
 
     location = /favicon.ico { access_log off; log_not_found off; }
